--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,10 @@
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "babel-plugin-styled-components": "^1.10.7",
     "copyfiles": "^2.2.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "build": "npm run sync-assets && npm run build:app && npm run build:script",
