--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Counter",
-  "description": "My first Aragon app",
+  "name": "Wiki",
+  "description": "Uprtcl Wiki",
   "script": "/script.js",
   "start_url": "/index.html"
 }
