--- a/app/package.json
+++ b/app/package.json
@@ -6,18 +6,18 @@
     "@aragon/api": "^2.0.0-beta.9",
     "@aragon/api-react": "^2.0.0-beta.9",
     "@aragon/ui": "^1.0.0",
-    "@uprtcl/access-control": "^0.0.6-alpha.10",
-    "@uprtcl/cortex": "^0.0.6-alpha.10",
-    "@uprtcl/documents": "^0.0.6-alpha.10",
-    "@uprtcl/ethereum-provider": "^0.0.6-alpha.10",
-    "@uprtcl/evees": "^0.0.6-alpha.10",
-    "@uprtcl/graphql": "^0.0.6-alpha.10",
-    "@uprtcl/http-provider": "^0.0.6-alpha.10",
-    "@uprtcl/ipfs-provider": "^0.0.6-alpha.10",
-    "@uprtcl/lenses": "^0.0.6-alpha.10",
-    "@uprtcl/micro-orchestrator": "^0.0.6-alpha.10",
-    "@uprtcl/multiplatform": "^0.0.6-alpha.10",
-    "@uprtcl/wikis": "^0.0.6-alpha.10",
+    "@uprtcl/access-control": "0.0.7-alpha.7",
+    "@uprtcl/cortex": "0.0.7-alpha.7",
+    "@uprtcl/documents": "0.0.7-alpha.7",
+    "@uprtcl/ethereum-provider": "0.0.7-alpha.7",
+    "@uprtcl/evees": "0.0.7-alpha.7",
+    "@uprtcl/graphql": "0.0.7-alpha.7",
+    "@uprtcl/http-provider": "0.0.7-alpha.7",
+    "@uprtcl/lenses": "0.0.7-alpha.7",
+    "@uprtcl/micro-orchestrator": "0.0.7-alpha.7",
+    "@uprtcl/multiplatform": "0.0.7-alpha.7",
+    "@uprtcl/multiprovider-wiki": "0.0.1-alpha.1",
+    "@uprtcl/wikis": "0.0.7-alpha.7",
     "core-js": "^3.6.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
